[package]
name = "voltaire"
version = "0.1.0"
edition = "2021"
description = "Who would be better than Voltaire to check (French) grammar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
