[package]
name = "voltaire"
version = "0.1.0"
edition = "2021"
description = "Who would be better than Voltaire to check (French) grammar"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
reqwest = "0.11.14"
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
